Update Milestone Calculator - Python.ipynb

--- a/Milestone Calculator - Python.ipynb
+++ b/Milestone Calculator - Python.ipynb
@@ -28,7 +28,7 @@
     "            print (f\"You will achieve your set milestone in {years_to_freedom} years! To accelerated this number quicker, continue to optomize processes and derive analytical insights.\")\n",
     "            return 0\n",
     "        \n",
-    "def main()\n",
+    "def main():\n",
     "    prog = input(\"Which program are you looking to run? Type 'returns' or 'milestone' \")\n",
     "    try: \n",
     "        current_wealth = float(input(\"Enter your current wealth: \"))\n",
